potter: overlay: Enable config_canDisableNavigationBar

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -348,4 +348,7 @@
     -->
     <integer name="config_screenPinningExitMode">2</integer>
 
+    <!-- Whether navigation bar can be disabled (for devices with hardware keys) -->
+    <bool name="config_canDisableNavigationBar">true</bool>
+
 </resources>
