potter: overlay: Enable turbo power charger support
* The text 'TurboPower connected' will be displayed on keyguard instead of 'Fast charging'

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -416,4 +416,7 @@
         <item>com.moto.actions.KeyHandler</item>
     </string-array>
 
+    <!-- Whether device has turbo power charging support -->
+    <bool name="config_hasTurboPowerCharger">true</bool>
+
 </resources>
