--- a/LineageActions/res/xml/doze_panel.xml
+++ b/LineageActions/res/xml/doze_panel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2017 The LineageOS Project
+     Copyright (C) 2017-2019 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License"
      you may not use this file except in compliance with the License.
@@ -21,12 +21,14 @@
         android:key="gesture_pick_up"
         android:defaultValue="false"
         android:title="@string/pick_up_gesture_title"
-        android:summary="@string/pick_up_gesture_summary" />
+        android:summary="@string/pick_up_gesture_summary"
+        android:icon="@drawable/ic_pickup" />
 
     <SwitchPreference
         android:key="gesture_hand_wave"
         android:defaultValue="false"
         android:title="@string/hand_wave_gesture_title"
-        android:summary="@string/hand_wave_gesture_summary" />
+        android:summary="@string/hand_wave_gesture_summary"
+        android:icon="@drawable/ic_hand" />
 
 </PreferenceScreen>
